...
    
    @Environment(\.managedObjectContext) private var viewContext
    
    @State private var showModelSelectionModal = false
    @State private var isHovered = false
    @State private var isHoveredOfflineButton = false
    @AppStorage("model") private var selectedModel: String = "llama3"
    
    @AppStorage("offline") private var offline: Bool = false
    
    @State private var showCheckmark = false
    @AppStorage("clipboardContext") private var clipboardContext: Bool = false
    
...
                            .buttonStyle(.plain)
                            #endif
                        }
                        
                        // 📝 TextField
                        TextField("", text: $text)
                            .accessibilityIdentifier("textFieldInput")
                            .textFieldStyle(.plain)
                            .background(.clear)
                            .frame(maxWidth: .infinity, maxHeight: 55)
                            .padding(.horizontal, 8)
                            .focused($isActive)
                            .onSubmit {
...
                            .font(.subheadline)
                    }
                    .padding(.vertical, 8)
                    .padding(.horizontal, 16)
                    .background(Color("TextField").opacity(isHovered ? 0.6 : 0.3)) // Darken on hover
                    .cornerRadius(6)
                }.accessibilityIdentifier("ModelSelectionButton")
                .buttonStyle(PlainButtonStyle())
                .onHover { hovering in
                    isHovered = hovering
                }
                .overlay( // Overlay ensures the popup does NOT affect layout
                    Group {
...
                    .animation(.easeInOut(duration: 0.2), value: offline) // Smooth transition
                }
                #if os(iOS)
                .disabled(true)
                #endif
                .disabled(!networkMonitor.isConnected) // 🔹 Disable when offline there's no internet
                .accessibilityIdentifier("OfflineButton") // Assign identifier to the button itself
                .accessibilityElement(children: .combine)
                .buttonStyle(PlainButtonStyle())
                .onHover { hovering in
                    isHoveredOfflineButton = hovering
                }
                .overlay( // Overlay ensures the popup does NOT affect layout
...
                            .font(.system(size: 13))
                            .foregroundColor(videoModeActive ? .green : .red) // Color changes dynamically
                            .transition(.scale.combined(with: .opacity)) // Smooth effect
                        #if os(iOS)
                        Text("")
                        #else
                        Text("Video mode").accessibilityIdentifier("videoModeIdentifier")
                            .font(.subheadline)
                            .foregroundColor(videoModeActive ?  .green.opacity(0.8): .red.opacity(0.8)) // Adjust text color
                        #endif
                            
                    }
                    .padding(.vertical, 8)
...
                        : Color("TextField").opacity(isHoveredOfflineButton ? 0.5 : 0.3) // Lighter when inactive
                    )
                    .cornerRadius(6)
                    .scaleEffect(videoModeActive ? 0.95 : 1) // Slight shrink when pressed
                    .animation(.easeInOut(duration: 0.2), value: videoModeActive) // Smooth transition
                }
                .accessibilityIdentifier("VideoMode") // Assign identifier to the button itself
                .accessibilityElement(children: .combine)
                .buttonStyle(PlainButtonStyle())
//                .disabled(!voiceModeActive)
                
                Button(action: {
                    withAnimation(.easeInOut(duration: 0.3)) { // Animate state change
...
